[Auto] Update docs as of 2026-06-03T1713